[package]
name = "chipmunk-rs"
version = "0.1.1"
authors = ["David Eichmann <EichmannD@gmail.com>"]
description = "Rust bindings to the Chipmunk2D physics engine."
documentation = "https://docs.rs/chipmunk-rs/0.1.1/chipmunk_rs/"
repository = "https://github.com/DavidEichmann/chipmunk-rs"
readme = "README.md"
keywords = ["physics", "Chipmunk", "Chipmunk2D", "bindings", "2D"]
license-file = "LICENSE"

links = "chipmunk"
build = "build.rs"

[build-dependencies]
cmake = "0.1.20"

[dependencies]
libc = "0.2.*"
